; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/optimizer/path/extr_pathkeys.c_make_pathkey_from_sortinfo.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/optimizer/path/extr_pathkeys.c_make_pathkey_from_sortinfo.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@BTGreaterStrategyNumber = common dso_local global i32 0, align 4
@BTLessStrategyNumber = common dso_local global i32 0, align 4
@BTEqualStrategyNumber = common dso_local global i32 0, align 4
@ERROR = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [42 x i8] c"missing operator %d(%u,%u) in opfamily %u\00", align 1
@.str.1 = private unnamed_addr constant [51 x i8] c"could not find opfamilies for equality operator %u\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32*, i32*, i32, i32, i32, i32, i32, i32, i32, i32, i32)* @make_pathkey_from_sortinfo to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @make_pathkey_from_sortinfo(i32* %0, i32* %1, i32 %2, i32 %3, i32 %4, i32 %5, i32 %6, i32 %7, i32 %8, i32 %9, i32 %10) #0 {
  %12 = alloca i32*, align 8
  %13 = alloca i32*, align 8
  %14 = alloca i32*, align 8
  %15 = alloca i32, align 4
  %16 = alloca i32, align 4
  %17 = alloca i32, align 4
  %18 = alloca i32, align 4
  %19 = alloca i32, align 4
  %20 = alloca i32, align 4
  %21 = alloca i32, align 4
  %22 = alloca i32, align 4
  %23 = alloca i32, align 4
  %24 = alloca i32, align 4
  %25 = alloca i32, align 4
  %26 = alloca i32*, align 8
  %27 = alloca i32*, align 8
  store i32* %0, i32** %13, align 8
  store i32* %1, i32** %14, align 8
  store i32 %2, i32* %15, align 4
  store i32 %3, i32* %16, align 4
  store i32 %4, i32* %17, align 4
  store i32 %5, i32* %18, align 4
  store i32 %6, i32* %19, align 4
  store i32 %7, i32* %20, align 4
  store i32 %8, i32* %21, align 4
  store i32 %9, i32* %22, align 4
  store i32 %10, i32* %23, align 4
  %28 = load i32, i32* %19, align 4
  %29 = icmp ne i32 %28, 0
  br i1 %29, label %30, label %32

30:                                               ; preds = %11
  %31 = load i32, i32* @BTGreaterStrategyNumber, align 4
  br label %34

32:                                               ; preds = %11
  %33 = load i32, i32* @BTLessStrategyNumber, align 4
  br label %34

34:                                               ; preds = %32, %30
  %35 = phi i32 [ %31, %30 ], [ %33, %32 ]
  store i32 %35, i32* %24, align 4
  %36 = load i32, i32* %16, align 4
  %37 = load i32, i32* %17, align 4
  %38 = load i32, i32* %17, align 4
  %39 = load i32, i32* @BTEqualStrategyNumber, align 4
  %40 = call i32 @get_opfamily_member(i32 %36, i32 %37, i32 %38, i32 %39)
  store i32 %40, i32* %25, align 4
  %41 = load i32, i32* %25, align 4
  %42 = call i32 @OidIsValid(i32 %41)
  %43 = icmp ne i32 %42, 0
  br i1 %43, label %51, label %44

44:                                               ; preds = %34
  %45 = load i32, i32* @ERROR, align 4
  %46 = load i32, i32* @BTEqualStrategyNumber, align 4
  %47 = load i32, i32* %17, align 4
  %48 = load i32, i32* %17, align 4
  %49 = load i32, i32* %16, align 4
  %50 = call i32 (i32, i8*, i32, ...) @elog(i32 %45, i8* getelementptr inbounds ([42 x i8], [42 x i8]* @.str, i64 0, i64 0), i32 %46, i32 %47, i32 %48, i32 %49)
  br label %51

51:                                               ; preds = %44, %34
  %52 = load i32, i32* %25, align 4
  %53 = call i32* @get_mergejoin_opfamilies(i32 %52)
  store i32* %53, i32** %26, align 8
  %54 = load i32*, i32** %26, align 8
  %55 = icmp ne i32* %54, null
  br i1 %55, label %60, label %56

56:                                               ; preds = %51
  %57 = load i32, i32* @ERROR, align 4
  %58 = load i32, i32* %25, align 4
  %59 = call i32 (i32, i8*, i32, ...) @elog(i32 %57, i8* getelementptr inbounds ([51 x i8], [51 x i8]* @.str.1, i64 0, i64 0), i32 %58)
  br label %60

60:                                               ; preds = %56, %51
  %61 = load i32*, i32** %13, align 8
  %62 = load i32*, i32** %14, align 8
  %63 = load i32, i32* %15, align 4
  %64 = load i32*, i32** %26, align 8
  %65 = load i32, i32* %17, align 4
  %66 = load i32, i32* %18, align 4
  %67 = load i32, i32* %21, align 4
  %68 = load i32, i32* %22, align 4
  %69 = load i32, i32* %23, align 4
  %70 = call i32* @get_eclass_for_sort_expr(i32* %61, i32* %62, i32 %63, i32* %64, i32 %65, i32 %66, i32 %67, i32 %68, i32 %69)
  store i32* %70, i32** %27, align 8
  %71 = load i32*, i32** %27, align 8
  %72 = icmp ne i32* %71, null
  br i1 %72, label %74, label %73

73:                                               ; preds = %60
  store i32* null, i32** %12, align 8
  br label %81

74:                                               ; preds = %60
  %75 = load i32*, i32** %13, align 8
  %76 = load i32*, i32** %27, align 8
  %77 = load i32, i32* %16, align 4
  %78 = load i32, i32* %24, align 4
  %79 = load i32, i32* %20, align 4
  %80 = call i32* @make_canonical_pathkey(i32* %75, i32* %76, i32 %77, i32 %78, i32 %79)
  store i32* %80, i32** %12, align 8
  br label %81

81:                                               ; preds = %74, %73
  %82 = load i32*, i32** %12, align 8
  ret i32* %82
}

declare dso_local i32 @get_opfamily_member(i32, i32, i32, i32) #1

declare dso_local i32 @OidIsValid(i32) #1

declare dso_local i32 @elog(i32, i8*, i32, ...) #1

declare dso_local i32* @get_mergejoin_opfamilies(i32) #1

declare dso_local i32* @get_eclass_for_sort_expr(i32*, i32*, i32, i32*, i32, i32, i32, i32, i32) #1

declare dso_local i32* @make_canonical_pathkey(i32*, i32*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
